--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
           <div
             class="border-t border-brand-900/50 pt-8 flex flex-col md:flex-row justify-between items-center gap-4 text-sm text-brand-300/60"
           >
-            <p>© 2026 Onye Ọdinaka. All rights reserved.</p>
+            <p>© 2026 Onye Ozi. All rights reserved.</p>
             <div class="flex items-center gap-1">
               Built with
               <span class="text-brand-500 animate-pulse">❤️</span> for local
